@@ -19,12 +19,14 @@
 - added: `controller.nocache()`
 - added: `controller.nocontent()`
 - added: `REPO` as a global variable
+- added: `PREF(name, [value])` (read+write) or `PREF.propname` (only read) for reading/writing a persistent preferences
 
 - updated: `$.invalid()` without arguments can return a function `function(err)`
 - updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
 - updated: `F.modify`, handler contains a new argument `controller`
 - updated: `headers` argument in `controller.proxy` supports `flags: []` for REQEUST method
 - updated: `.filefs()` and `.filenosql()` supports `download` with `true` (`filename` will be read from NoSQL binary file)
+- updated: `CACHE.propname` for reading only values from cache
 
 - fixed: error handling in dynamic schemas
 - fixed: CSS variables
